Add requirements and linting config; clean code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,10 @@
 [tool.pytest.ini_options]
 addopts = "--cov=helperfuncs --cov-report=term-missing"
 testpaths = ["tests"]
+
+[tool.ruff]
+line-length = 88
+
+[tool.ruff.lint]
+select = ["E", "F"]
+ignore = ["E501", "E721"]
